# AutonomousDriving

./: README.md
2026/: README_TineLiDAR.md  README_parallel.md  よく使うコマンド.md
2026/aichallenge-2025/: how2.md  よく使うコマンド.md
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/: LICENSE  README.md  autoware.rviz  usage.md
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/csv/: pitlane_trajectory.csv  pitlane_trajectory2.csv  raceline_aic_mincrv2_fg_fixed.csv  raceline_aic_mincrv2_fg_fixed_Re.csv  raceline_aic_mincrv2_fixed.csv  raceline_aio_fg.csv  raceline_awsim_30km.csv  raceline_awsim_30km_from_garage.csv  raceline_awsim_30km_from_garage_NATC2.csv  raceline_awsim_30km_from_garage_adj5.csv  raceline_awsim_30km_pp.csv  raceline_base_15km.csv
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/editor_tool_server/: CMakeLists.txt  package.xml
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/editor_tool_server/config/: editor_tool_server.yaml
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/editor_tool_server/include/editor_tool_server/: interactive_server.hpp
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/editor_tool_server/src/: interactive_server.cpp
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/editor_tool_srvs/: CMakeLists.txt  package.xml
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/editor_tool_srvs/srv/: SelectRange.srv
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/rviz_editor_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/rviz_editor_plugins/include/rviz_editor_plugins/: csv_marker_display.hpp  editor_tool.hpp
2026/aichallenge-2025/aichallenge_submit/aichallenge-trajectory-editor/rviz_editor_plugins/src/: csv_marker_display.cpp  editor_tool.cpp
2026/aichallenge-2025/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit.launch.xml  reference.launch.xml  reference.launch_2025make.xml
2026/aichallenge-2025/aichallenge_submit/aichallenge_submit_launch/map/: lanelet2_map.osm
2026/aichallenge-2025/aichallenge_submit/goal_pose_setter/src/: goal_pose_setter_node.cpp  goal_pose_setter_node.hpp
2026/aichallenge-2025/aichallenge_submit/gyro_odometer/src/: gyro_odometer_core.cpp
2026/aichallenge-2025/aichallenge_submit/imu_corrector/config/: imu_corrector.param.yaml
2026/aichallenge-2025/aichallenge_submit/imu_corrector/src/: imu_corrector_core.cpp
2026/aichallenge-2025/aichallenge_submit/imu_gnss_poser/src/: imu_gnss_poser_node.cpp
2026/aichallenge-2025/aichallenge_submit/laserscan_generator/: CMakeLists.txt  package.xml
2026/aichallenge-2025/aichallenge_submit/laserscan_generator/config/: laserscan_generator_node.param.yaml
2026/aichallenge-2025/aichallenge_submit/laserscan_generator/include/laserscan_generator/: laserscan_generator_node.hpp
2026/aichallenge-2025/aichallenge_submit/laserscan_generator/launch/: laserscan_generator.launch.xml
2026/aichallenge-2025/aichallenge_submit/laserscan_generator/map/: lane.csv
2026/aichallenge-2025/aichallenge_submit/laserscan_generator/src/: laserscan_generator_node.cpp
2026/aichallenge-2025/aichallenge_submit/racing_kart_description/urdf/: vehicle.xacro
2026/aichallenge-2025/aichallenge_submit/racing_kart_gnss_poser/launch/: gnss_poser.launch.xml
2026/aichallenge-2025/aichallenge_submit/racing_kart_gnss_poser/src/: gnss_poser_core.cpp
2026/aichallenge-2025/aichallenge_submit/racing_kart_sensor_kit_description/urdf/: sensors.xacro
2026/aichallenge-2025/aichallenge_submit/tiny_lidar_net_controller/: CMakeLists.txt  package.xml
2026/aichallenge-2025/aichallenge_submit/tiny_lidar_net_controller/ckpt/: tinylidarnet_weights.npy
2026/aichallenge-2025/aichallenge_submit/tiny_lidar_net_controller/config/: tiny_lidar_net_node.param.yaml
2026/aichallenge-2025/aichallenge_submit/tiny_lidar_net_controller/launch/: tiny_lidar_net.launch.xml
2026/aichallenge-2025/aichallenge_submit/tiny_lidar_net_controller/tiny_lidar_net_controller/: tiny_lidar_net_controller_core.py  tiny_lidar_net_controller_node.py
2026/aichallenge-2025/aichallenge_submit/tiny_lidar_net_controller/tiny_lidar_net_controller/model/: __init__.py  tinylidarnet.py
2026/aichallenge-2025/aichallenge_submit/tiny_lidar_net_controller/tiny_lidar_net_controller/model/numpy/: initializers.py  layers.py
2026/aichallenge-racingkart/: create_submit_file_kai.bash  remove_git_completely.sh
2026/aichallenge-racingkart/tools/: mpc2pp.py  pp2mpc.py
2026/global_racetrajectory_optimization/: requirements.txt  setup_env.bash
2026/global_racetrajectory_optimization/inputs/tracks/: aic_2024.csv
2026/global_racetrajectory_optimization/opt_mintime_traj/src/: opt_mintime.py
2026/global_racetrajectory_optimization/outputs/mintime/: accelerations.csv  lam_g0.csv  lam_x0.csv  w0.csv
2026/global_racetrajectory_optimization/params/: racecar.ini
2026/global_racetrajectory_optimization/tools/: osm_to_lane_csv.py
2026/lap_time_tracker/aichallenge-racingkart/: post_run.bash  requirements_lap_time_tracker.txt
2026/lap_time_tracker/aichallenge-racingkart/output/: lap_time_results.xlsx
2026/standalone-trajectory-editor/: CMakeLists.txt  CONTRIBUTING_EN.md  DEVELOPMENT_SUMMARY.md  LICENSE  README.md  README_EN.md  USER_MANUAL.md  osm_to_csv_converter.cpp  test_complete.cpp  test_graphics.cpp  track_boundaries_base.csv
2026/standalone-trajectory-editor/data/: lanelet2_map.osm  raceline_2026_fp.csv  raceline_2026_fp2.csv  raceline_2026_fp3.csv  raceline_awsim_30km_from_garage.csv  raceline_awsim_shortest_m_11.csv  raceline_awsim_shortest_m_12.csv
2026/standalone-trajectory-editor/src/core/: edit_history.cpp  track_boundaries.cpp  track_boundaries.hpp  trajectory_data.cpp
2026/standalone-trajectory-editor/src/gui/: graphics_trajectory_view.cpp  graphics_trajectory_view.hpp
2026/standalone-trajectory-editor/src/utils/: csv_parser.hpp
(+32 files in other folders)
